# solidafy-cdk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  llm.txt  solidafy-cdk-spec.md
.github/workflows/: ci.yml  release.yml
connectors/: anthropic-billing.yaml  cloudflare-billing.yaml  github-billing.yaml  hubspot.yaml  openai-billing.yaml  salesforce-bulk.yaml  salesforce.yaml  shopify.yaml  stripe.yaml  zendesk.yaml
docs/: ICEBERG_SUPPORT.md  PUBLIC_REPO_SYNC.md
src/: config.rs  connector.rs  connectors.rs  error.rs  lib.rs  main.rs  template.rs  types.rs
src/auth/: authenticator.rs  mod.rs  tests.rs  types.rs
src/cli/: commands.rs  mod.rs  runner.rs  server.rs
src/database/: engine.rs  mod.rs
src/decode/: decoders.rs  mod.rs  tests.rs  types.rs
src/engine/: mod.rs  tests.rs  types.rs
src/http/: client.rs  mod.rs  rate_limit.rs  tests.rs
src/loader/: mod.rs  parser.rs  tests.rs  types.rs
src/output/: cloud.rs  mod.rs  schema.rs  tests.rs  writer.rs
src/pagination/: mod.rs  strategies.rs  tests.rs  types.rs
src/partition/: mod.rs  routers.rs  tests.rs  types.rs
src/schema/: inference.rs  mod.rs  tests.rs  types.rs
src/state/: manager.rs  manager_tests.rs  mod.rs  types.rs
tests/: database_integration.rs  integration_tests.rs
